# burgonet-gateway

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.fr.md  README.md  Updated `README.md  activity4changelog.sh  aggregator.py  changelog.md  conf.yml  dispatcher.py  docker-compose.yml  init.ldif  log4rs.yml  markdown  mkdocs.yml  pytest.ini  requirements.txt  server.py  wsgi.py
.github/workflows/: ci.yml
docs/: about.md  api-reference.md  chat-interface.md  configuration.md  features.md  getting-started.md  index.md  monitoring.md  screenshots.md  technical.md  use-cases.md
docs/images/: logo.xcf  logo_name.xcf  overview.excalidraw  overview2.excalidraw
flask-app/: requirements.txt
flask-app/app/admin/: routes.py
flask_app/: requirements.txt
flask_app/app/: __init__.py  config.py  filters.py  models.py
flask_app/app/admin/: routes.py
frontend/app/: __init__.py  config.py  models.py
ldap-init/: 00-domain.ldif  00-init.ldif  01-people-ou.ldif  02-groups-ou.ldif  03-users.ldif  04-users.ldif  05-groups.ldif  50-init.ldif  bootstrap.ldif
lua-scripts/: access.lua  body_filter.lua  get_apikey.lua
nginx-conf/: nginx.conf  vhost.conf
nginx-conf/conf.d/: burgonet.conf  default.conf
src/: config.rs  main.rs  parsers.rs  pii_protection.rs  rate_limit.rs  token_limit.rs
src/app/: admin.rs  chat.rs  echo.rs  gateway.rs  mod.rs
src/service/: admin.rs  chat.rs  echo.rs  gateway.rs  mod.rs
tests/: admin.py  local.py  local.sh  local_gemma.sh  remote.py  remote_deepseek.sh
www/: chat.html  index.html  parsers.js  style.css  tokens.html  usage.html
(+21 files in other folders)
