[package]
name = "burgonet-gw"
version = "0.1.0"
edition = "2021"


[dependencies]
moka = { version = "0.12.10", features = ["sync"] }
reqwest = { version = "0.11", features = ["json"] }
pingora = { version = "0.4", features = ["openssl"] }
pingora-core = "0.4.0"
pingora-proxy = "0.4.0"
pingora-http = "0.4.0"
pingora-limits = "0.4.0"
pingora-timeout = "0.4.0"
tokio = { version = "1.10", features = ["full"] }
async-trait = "0.1.85"
clap = { version = "3.2.25", features = ["derive"] }
http = "1.2.0"
log = "0.4.25"
env_logger = "0.9"
bytes = "1.9.0"
prometheus = "0"
serde_yaml = "0.8.26"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.7.0"
serde_json = "1.0.108"
anyhow = "1.0.95"
url = "2.5.0"
redb = "2.4.0"
chrono = "0.4"
base64 = "0.21.7"
once_cell = "1.19.0"
rust-embed="8.5.0"
tree_magic = "0.2.3"
flate2 = "1.0.19"

[dev-dependencies]
env_logger = "0.9"
prometheus = "0"
